--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -323,8 +323,7 @@ veldleeuwerik_presences <- mas_clean %>%
 
 In telperiodes 1-3 is het aantal waarnemingen van Veldleeuwerik ongeveer even groot.
 In telperiode 4 ligt dit iets lager.
-We zien inderdaad op de website van SOVON dat de datumgrenzen 1 april tot 15 juni gelden.
-We nemen telperiode 4 dus niet mee in de analyses.
+We zien inderdaad op de website van SOVON dat de datumgrenzen 1 april tot 15 juni gelden [@veldleeuwerikSovon]. We nemen telperiode 4 dus niet mee in de analyses.
 
 ```{r}
 veldleeuwerik_presences %>%
@@ -1020,11 +1019,11 @@ for (i in seq_len(length(forms))) {
 
 De volgende hazard-rate modellen konden niet gefit worden:
 
-- ~regio+jaar+openheid
-- ~regio+sbp+openheid
-- ~regio+jaar+sbp+openheid
-- ~regio*jaar
-- ~sbp*openheid
+-   \~regio+jaar+openheid
+-   \~regio+sbp+openheid
+-   \~regio+jaar+sbp+openheid
+-   \~regio\*jaar
+-   \~sbp\*openheid
 
 ## Model selectie {#selectie-distance}
 
@@ -1142,7 +1141,7 @@ veldleeuwerik_covars <- c("sbp", "jaar", "openheid")
 
 ## Resultaten {#resultaten-distance}
 
-We hebben de studieregio in 2$\times$5 strata opgesplits: elk jaar voor De Moeren en de Oostelijke leemstreek.
+We hebben de studieregio in 2\$\times\$5 strata opgesplits: elk jaar voor De Moeren en de Oostelijke leemstreek.
 Beschouw $A(s)$ de totale oppervlakte van stratum $s$ tot waar we de abundantieschatting willen extrapoleren en $a(s)$ het gesampelde gebied.
 De oppervlakte zal niet wijzigen over dejaren maar enkel tussen de regio's.
 
@@ -1194,7 +1193,7 @@ cbind(veldleeuwerik_dist_model$ddf$data,
   kable()
 ```
 
-De gemiddelde detectiekans $\hat{P}_a$ is gelijk aan `r round(veldleeuwerik_dist_model$dht$individuals$average.p, digits = 3)`
+De gemiddelde detectiekans $\hat{P}_a$ is gelijk aan `r round(veldleeuwerik_dist_model$dht$individuals$average.p, digits = 3)`.
 Deze kunnen we als volgt visualiseren:
 
 ```{r}
@@ -1258,14 +1257,25 @@ summary_results_veldleeuwerik_dist %>%
 Zij stellen dat dit kan worden veroorzaakt doordat vogels zich verplaatsen als reactie op de waarnemer of het afronden van afstanden door waarnemers.
 Dit laatste is bij ons zeker niet het geval doordat waarnemers een punt aanduiden op de kaart via een app en niet manueel een afstand invoeren.
 Het probleem ligt dus waarschijnlijk in het gedrag van de soort.
-Veldleeuwerikken vliegen gemakkelijk op bij verstoring waardoor we minder waarnemingen zien op kleinere afstanden en dan weer een groter aantal zien rond ca. 75-100 m. 
+Veldleeuwerikken vliegen gemakkelijk op bij verstoring waardoor we minder waarnemingen zien op kleinere afstanden en dan weer een groter aantal zien rond ca.
+75-100 m.
 Bovendien is de soort nog gemakkelijk te horen op grotere afstand zonder exact de locatie te weten.
 Hierdoor zien we opnieuw een stijging rond 250 m.
 @roodbergen2011 fitten daarom voor deze soort een detectiecurve m.b.v. afstandsintervallen.
 Wij groepeerden daarom de afstanden per 50 m.
-Hoewel de fit er visueel beter uitzag, waren de densiteitsschattingen en hun onzekerheid quasi identiek aan de eerdere resultaten zonder groepering (resultaten niet getoond).  
-  
-We kunnen deze resultaten vergelijken met andere technieken. Het gemiddelde en het maximum aantal en broedparen over de telperiodes. Opgeteld per jaar en per regio. Omgerekend naar densiteit door te delen door de bezochte oppervlakte. Voor het gemiddelde is ook met absensies rekening gehouden (maakt voor maximum niet uit). De gemiddeldes liggen lager, terwijl de maxima goed overeenkomen met de resultaten van distance sampling. In de volgende figuur zijn de gemiddeldes en maxima aangegeven door bar-plots en waarbij de resultaten van distance sampling erover zijn geplot. 
+Hoewel de fit er visueel beter uitzag, waren de densiteitsschattingen en hun onzekerheid quasi identiek aan de eerdere resultaten zonder groepering (resultaten niet getoond).
+
+We kunnen deze resultaten vergelijken met andere technieken.
+Het gemiddelde en het maximum aantal en broedparen over de telperiodes.
+Opgeteld per jaar en per regio.
+Omgerekend naar densiteit door te delen door de bezochte oppervlakte.
+Voor het gemiddelde is ook met absensies rekening gehouden (maakt voor maximum niet uit).
+De gemiddeldes liggen lager, terwijl de maxima goed overeenkomen met de resultaten van distance sampling.
+@wiersma2021 gebruiken de maxima om de densiteiten te schatten.
+Ze stellen dat dit minimumschattingen zijn omdat ze niet voor onvolledige trefkans hebben gecorrigeerd.
+Wij doen dat wel via distance sampling, maar in het geval van de Veldleeuwerik zien we hier geen groot verschil tussen het gebruik van maxima of distance sampling.
+
+In de volgende figuur zijn de gemiddeldes en maxima aangegeven door bar-plots en waarbij de resultaten van distance sampling erover zijn geplot.
 
 ```{r}
 # Bereken aantal plots per regio per jaar
@@ -1317,6 +1327,5 @@ veldleeuwerik_df %>%
         "tot_max_plots" = "Maximum aantal broedparen per plot")
       ), scales = "free_y")
 ```
-
 
 ## Referenties
