--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -105,8 +105,8 @@ Deze scores zijn tot op een zekere hoogte subjectief, maar ze kunnen ons op het 
 # Vergelijking landbouwstreken
 
 ```{r}
-test <- st_crop(landbouwstreken, leefdaal)
-mapview(test, zcol = "NAAM", layer.name = "Landbouwstreek", 
+landbouwstreken_crop <- st_crop(landbouwstreken, leefdaal)
+mapview(landbouwstreken_crop, zcol = "NAAM", layer.name = "Landbouwstreek", 
         alpha.regions = 0.3, col.regions = c("red", "green", "blue")) +
   mapview(leefdaal, zcol = "naam", layer.name = "Deelgebied", alpha.regions = 1)
 ```
@@ -1377,4 +1377,31 @@ rbind(data.frame(conclusie = conclusie_df$Kortenberg,
   kable()
 ```
 
-In de tabellen zien we geen duidelijk beste kandidaat als controlegebied. De finale beslissing zal afhangen van het belang dat aan elke categorie wordt toegekend. Als openheid van het landschap en verschillen in absolute proporties in landgebruik en hoofdteelten belangrijk zijn, lijkt Kortenberg de beste kandidaat. Als verschillen in relatieve proporties belangrijk zijn en de aanwezigheid van MAS-punten, an Lovenjoel misschien even goed dienen als controlegebied.
+In de tabellen zien we geen duidelijk beste kandidaat als controlegebied. De finale beslissing zal afhangen van het belang dat aan elke categorie wordt toegekend. Als openheid van het landschap en verschillen in absolute proporties in landgebruik en hoofdteelten belangrijk zijn, lijkt Kortenberg de beste kandidaat. Als verschillen in relatieve proporties belangrijk zijn en de aanwezigheid van MAS-punten, an Lovenjoel misschien even goed dienen als controlegebied.  
+  
+**Discussie**  
+Percelen samen nemen met dezelfde hoofdteelt is geen goed idee (tenzij ze van dezelfde landbouwer zouden zijn), want die worden niet altijd op dezelfde moment ingezaaid. Die variatie aan gewashoogte, ander beheer (bv. andere sproeitijdstippen), randeffecten (niet-productieve strook tussen de percelen), maken dat je percelen met dezelfde hoofdteelt niet zomaar mag samenvoegen. Want die variatie is voor akkervogels wel relevant  
+In de toekomst zullen we de compositionele variabelen moeten herclassificeren. Nu wordt elke categorie bekeken, ook deze met heel kleine oppervlakten of die apart geen relevantie hebben voor akkervogels.  
+  
+**Conclusie**  
+Naar aanleiding van de meeting op 11 januari 2023 bleken de volgende componenten het belangrijkst:
+
+-   Landbouwstreek
+-   Beheerovereenkomsten m.b.t. soortbeschermingsmaatregelen
+-   OL en HOL
+
+We besluiten dat Kortenberg het best dient als controlegebied voor Zavelberg.
+
+```{r}
+leefdaal_final <- leefdaal %>%
+  filter(naam != "Lovenjoel")
+landbouwstreken_subset <- st_crop(landbouwstreken, leefdaal_final %>%
+                                    st_buffer(7000))
+
+mapview(landbouwstreken_subset, zcol = "NAAM", layer.name = "Landbouwstreek", 
+        alpha.regions = 0.3, 
+        col.regions = c("burlywood4", "red", "green", "blue")) +
+  mapview(leefdaal_final, zcol = "naam", layer.name = "Deelgebied", 
+          alpha.regions = 1)
+```
+
