--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -63,13 +63,13 @@ knitr::write_bib(c("base", "Distance"), here("src", "markdown", "mas",
 Een robuuste en reproduceerbare workflow creëren om de densiteit van akkervogels te schatten rekening houdend met de detectiekans.
 Omwille van het verschil in design tussen 2022 en de voorgaande jaren, zullen we densiteiten schatten voor twee datasets:
 
-1.  2022
-    -   schatting per stratum: regio, sbp, openheid
-    -   volledige dataset 2022
-2.  2018-2022: 
+1.  2018-2022: 
     -   schatting per stratum: jaar, regio
     -   zou allemaal (grotendeels) OL en binnen sbp moeten zijn
     -   voeg enkel plots van 2022 toe als ze minstens eenmaal geteld zijn in een van de voorgaande jaren
+2.  2022
+    -   schatting per stratum: regio, sbp, openheid
+    -   volledige dataset 2022
 
 # Inlezen data {#inlezen-data}
 
@@ -721,9 +721,9 @@ veldleeuwerik_presences2 %>%
           legend.direction = "horizontal")
 ```
 
-# Distance sampling {#distance-sampling}
+# Densiteitsschattingen 2018-2022 {#dens-2018-2022}
 
-## Inleiding {#inleiding-distance}
+## Inleiding tot distance sampling {#inleiding-distance}
 
 Distance sampling is een techniek om de abundantie en/of densiteit van biologische populaties te schatten op basis van een steekproef uit de populatie.
 Het is namelijk in de praktijk quasi nooit mogelijk om elk individu te tellen.
@@ -779,7 +779,9 @@ ggplot(data = circle_fun()) +
   theme_void()
 ```
 
-## Data preparatie {#preparatie-distance}
+## Data selectie en preparatie {#preparatie-distance}
+
+We beschouwen alle plots van 2018-2021 en voegen enkel plots van 2022 toe als ze minstens eenmaal geteld zijn in een van de voorgaande jaren.
 
 De eerste dataset wordt gebruikt om de detectiecurve te fitten (zie verder).
 We hebben een kolom `object` nodig: volgnummer voor elke waarneming; een kolom `size`: aantal broedparen per waarneming; een kolom `distance`: afstand tot elke waarneming; kolommen met covariaten: `regio`, `jaar`, `sbp` en `openheid`.
