--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -783,11 +783,24 @@ ggplot(data = circle_fun()) +
 
 We beschouwen alle plots van 2018-2021 en voegen enkel plots van 2022 toe als ze minstens eenmaal geteld zijn in een van de voorgaande jaren.
 
+```{r}
+plots_old <- design_2018_2022 %>%
+  filter(jaar != 2022) %>%
+  distinct(plotnaam) %>%
+  pull()
+
+veldleeuwerik_2018_2022_reduced <- veldleeuwerik_presences %>%
+  filter(plotnaam %in% plots_old)
+
+design_2018_2022_reduced <- design_2018_2022 %>%
+  filter(plotnaam %in% plots_old)
+```
+
 De eerste dataset wordt gebruikt om de detectiecurve te fitten (zie verder).
 We hebben een kolom `object` nodig: volgnummer voor elke waarneming; een kolom `size`: aantal broedparen per waarneming; een kolom `distance`: afstand tot elke waarneming; kolommen met covariaten: `regio`, `jaar`, `sbp` en `openheid`.
 
 ```{r}
-veldleeuwerik_distance <- veldleeuwerik_presences %>%
+veldleeuwerik_distance <- veldleeuwerik_2018_2022_reduced %>%
   st_drop_geometry() %>%
   select(object = oid, size = aantal, distance = distance2plot, 
          regio, jaar, sbp, openheid) %>%
@@ -844,26 +857,26 @@ We maken daarom dataframes om de abundanties en densiteiten te berekenen.
 
 ```{r}
 # Oppervlakte per stratum
-region_table <- design_2018_2022 %>%
+region_table <- design_2018_2022_reduced %>%
   distinct(regio, jaar) %>%
   full_join(areas, by = "regio") %>%
   mutate(Region.Label = paste(regio, jaar, sep = " - ")) %>%
   select(Region.Label, Area)
 
 # Effort per sample en plot per stratum
-effort <- veldleeuwerik_presences %>%
+effort <- veldleeuwerik_2018_2022_reduced %>%
   pull(periode_in_jaar) %>%
   unique() %>%
   length()
 
-sample_table <- design_2018_2022 %>%
+sample_table <- design_2018_2022_reduced %>%
   distinct(plotnaam, regio, jaar) %>%
   mutate(Region.Label = paste(regio, jaar, sep = " - "),
          Effort = effort) %>%
   select(Sample.Label = plotnaam, Region.Label, Effort)
 
 # Waarnemingen per welke plots en strata
-obs_table <- veldleeuwerik_presences %>%
+obs_table <- veldleeuwerik_2018_2022_reduced %>%
   st_drop_geometry() %>%
   select(object = oid, Region.Label, Sample.Label = plotnaam)
 ```
@@ -986,20 +999,22 @@ De `ds()` functie voegt zelf aanpassingstermen toe aan de sleutelfunctie om de f
 keys <- c("hn", "hr")
 
 # Null models
-veldleeuwerik_dist_hn0 <- ds(data = veldleeuwerik_distance, key = "hn", 
-  truncation = 300, transect = "point", dht_group = FALSE,  
+veldleeuwerik_dist_2018_2022_hn0 <- ds(data = veldleeuwerik_distance, 
+  key = "hn", truncation = 300, transect = "point", dht_group = FALSE,  
   convert_units = conversion_factor, region_table = region_table, 
   sample_table = sample_table, obs_table = obs_table, max_adjustments = 2,
   monotonicity = "strict")
 
-veldleeuwerik_dist_hr0 <- ds(data = veldleeuwerik_distance, key = "hr", 
-  truncation = 300, transect = "point", dht_group = FALSE,  
+veldleeuwerik_dist_2018_2022_hr0 <- ds(data = veldleeuwerik_distance, 
+  key = "hr", truncation = 300, transect = "point", dht_group = FALSE,  
   convert_units = conversion_factor, region_table = region_table, 
   sample_table = sample_table, obs_table = obs_table, max_adjustments = 2,
   monotonicity = "strict")
 
-out_models <- list(veldleeuwerik_dist_hn0, veldleeuwerik_dist_hr0)
-model_names <- c("veldleeuwerik_dist_hn0", "veldleeuwerik_dist_hr0")
+out_models <- list(veldleeuwerik_dist_2018_2022_hn0, 
+                   veldleeuwerik_dist_2018_2022_hr0)
+model_names <- c("veldleeuwerik_dist_2018_2022_hn0", 
+                 "veldleeuwerik_dist_2018_2022_hr0")
 
 # Sla de gefitte models op op deze locatie
 model_path <- "./src/markdown/mas/distance_models/"
@@ -1010,7 +1025,7 @@ for (i in seq_len(length(forms))) {
   
   for (k in keys) {
     # Naam voor model
-    mod_name <- paste0("veldleeuwerik_dist_", k, i)
+    mod_name <- paste0("veldleeuwerik_dist_2018_2022_", k, i)
     file <- paste0(model_path, mod_name, ".rds")
     
     # Sla model op als het nog niet bestaat en lees het in anderzijds
@@ -1068,34 +1083,34 @@ Het Hazard-rate model waarbij de detectiekans afhankelijk is van jaar en openhei
 Op basis van dit model testen we nog enkele combinaties waarbij we interacties tussen elke combinatie van twee variabelen toevoegen (niet regio\*openheid).
 
 ```{r, cache=TRUE}
-veldleeuwerik_dist_hr21 <- ds(data = veldleeuwerik_distance, key = "hr", 
+veldleeuwerik_dist_2018_2022_hr21 <- ds(data = veldleeuwerik_distance, key = "hr", 
         formula = ~regio*jaar + openheid, adjustment = NULL, truncation = 300, 
         transect = "point", dht_group = FALSE, 
         convert_units = conversion_factor, region_table = region_table, 
         sample_table = sample_table, obs_table = obs_table)
 
-veldleeuwerik_dist_hr22 <- ds(data = veldleeuwerik_distance, key = "hr", 
+veldleeuwerik_dist_2018_2022_hr22 <- ds(data = veldleeuwerik_distance, key = "hr", 
         formula = ~sbp*jaar + openheid, adjustment = NULL, truncation = 300, 
         transect = "point", dht_group = FALSE, 
         convert_units = conversion_factor, region_table = region_table, 
         sample_table = sample_table, obs_table = obs_table)
 
-veldleeuwerik_dist_hr23 <- ds(data = veldleeuwerik_distance, key = "hr", 
+veldleeuwerik_dist_2018_2022_hr23 <- ds(data = veldleeuwerik_distance, key = "hr", 
         formula = ~jaar + openheid*sbp, adjustment = NULL, truncation = 300, 
         transect = "point", dht_group = FALSE, 
         convert_units = conversion_factor, region_table = region_table, 
         sample_table = sample_table, obs_table = obs_table)
 
-veldleeuwerik_dist_hr24 <- ds(data = veldleeuwerik_distance, key = "hr", 
+veldleeuwerik_dist_2018_2022_hr24 <- ds(data = veldleeuwerik_distance, key = "hr", 
         formula = ~regio*jaar + openheid*sbp, adjustment = NULL, truncation = 300, 
         transect = "point", dht_group = FALSE, 
         convert_units = conversion_factor, region_table = region_table, 
         sample_table = sample_table, obs_table = obs_table)
 
 summarize_ds_models2(
-  veldleeuwerik_dist_hr9, veldleeuwerik_dist_hr19,
-  veldleeuwerik_dist_hr21, veldleeuwerik_dist_hr22, veldleeuwerik_dist_hr23,
-  veldleeuwerik_dist_hr24
+  veldleeuwerik_dist_2018_2022_hr9, veldleeuwerik_dist_2018_2022_hr19,
+  veldleeuwerik_dist_2018_2022_hr21, veldleeuwerik_dist_2018_2022_hr22, veldleeuwerik_dist_2018_2022_hr23,
+  veldleeuwerik_dist_2018_2022_hr24
   ) %>%
   kable()
 ```
@@ -1110,9 +1125,9 @@ Voor studies met punttransecten geven kansdichtheidsfunctieplots ook een goed id
 
 ```{r}
 par(mfrow = c(1, 2))
-von_mises <- gof_ds(veldleeuwerik_dist_hr22)
+von_mises <- gof_ds(veldleeuwerik_dist_2018_2022_hr22)
 von_mises
-plot(veldleeuwerik_dist_hr22, pdf = TRUE, showpoints = FALSE)
+plot(veldleeuwerik_dist_2018_2022_hr22, pdf = TRUE, showpoints = FALSE)
 par(mfrow = c(1, 1))
 ```
 
@@ -1122,14 +1137,14 @@ Inderdaad, als we kijken naar de verdeling van de afstanden, zien we dat de dete
 Het is dus niet mogelijk om een detectiecurve perfect te fitten.
 
 ```{r}
-plot_detection_curve(veldleeuwerik_dist_hr22, plot_average_fit = FALSE, 
+plot_detection_curve(veldleeuwerik_dist_2018_2022_hr22, plot_average_fit = FALSE, 
                      n_breaks = 60)
 ```
 
 Daarom fitten we dit model opnieuw waarbij we de afstanden groeperen in intervallen van 50 m.
 
 ```{r, cache=TRUE}
-veldleeuwerik_dist_hr22_binned <- ds(data = veldleeuwerik_distance, key = "hr", 
+veldleeuwerik_dist_2018_2022_hr22_binned <- ds(data = veldleeuwerik_distance, key = "hr", 
         formula = ~sbp*jaar + openheid, adjustment = NULL, truncation = 300, 
         transect = "point", dht_group = FALSE, 
         cutpoints = c(0, 50, 100, 150, 200, 250, 300),
@@ -1140,13 +1155,13 @@ veldleeuwerik_dist_hr22_binned <- ds(data = veldleeuwerik_distance, key = "hr",
 De fit ziet er beter uit dan voordien.
 
 ```{r}
-plot(veldleeuwerik_dist_hr22_binned, pdf = TRUE, showpoints = FALSE)
+plot(veldleeuwerik_dist_2018_2022_hr22_binned, pdf = TRUE, showpoints = FALSE)
 ```
 
 We selecteren het intervalmodel met Hazard-rate sleutelfunctie waarbij de detectiekans afhankelijk is van sbp, jaar en openheid met sbp en jaar in interactie als finale model.
 
 ```{r}
-veldleeuwerik_dist_model <- veldleeuwerik_dist_hr22_binned
+veldleeuwerik_dist_2018_2022_model <- veldleeuwerik_dist_2018_2022_hr22_binned
 veldleeuwerik_covars <- c("sbp", "jaar", "openheid")
 ```
 
@@ -1195,25 +1210,27 @@ De onzekerheid in de volgende resultaten zijn telkens 95 % betrouwbaarheidsinter
 De detectiekansen en standard errors zijn verschillend per regio, jaar en openheid van het landschap:
 
 ```{r}
-cbind(veldleeuwerik_dist_model$ddf$data, 
-      "p(z)" = predict(veldleeuwerik_dist_model, se.fit = TRUE)$fitted, 
-      "standard error" = predict(veldleeuwerik_dist_model, se.fit = TRUE)$se) %>%
+cbind(veldleeuwerik_dist_2018_2022_model$ddf$data, 
+      "p(z)" = predict(veldleeuwerik_dist_2018_2022_model, 
+                       se.fit = TRUE)$fitted, 
+      "standard error" = predict(veldleeuwerik_dist_2018_2022_model, 
+                                 se.fit = TRUE)$se) %>%
   select(all_of(veldleeuwerik_covars), "p(z)", "standard error") %>%
   distinct() %>%
   arrange(!!!veldleeuwerik_covars) %>%
   kable()
 ```
 
-De gemiddelde detectiekans $\hat{P}_a$ is gelijk aan `r round(veldleeuwerik_dist_model$dht$individuals$average.p, digits = 3)`.
+De gemiddelde detectiekans $\hat{P}_a$ is gelijk aan `r round(veldleeuwerik_dist_2018_2022_model$dht$individuals$average.p, digits = 3)`.
 Deze kunnen we als volgt visualiseren:
 
 ```{r}
-plot_detection_curve(veldleeuwerik_dist_model, plot_average_fit = TRUE, 
-                     n_breaks = 6)
+plot_detection_curve(veldleeuwerik_dist_2018_2022_model, 
+                     plot_average_fit = TRUE, n_breaks = 6)
 ```
 
 ```{r}
-summary_veldleeuwerik_dist <- summary(veldleeuwerik_dist_model)
+summary_veldleeuwerik_dist <- summary(veldleeuwerik_dist_2018_2022_model)
 
 summary_results_veldleeuwerik_dist <- bind_rows(
   summary_veldleeuwerik_dist$dht$individuals$D %>%
